# brickblaster-c

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  audit-asm-faithful.md  audit-findings.md
.github/workflows/: build.yml
android/: README.md  settings.gradle
android/app/: proguard-rules.pro
data/: blaster.cfg
src/: animation.c  animation.h  assets.c  assets.h  audio.c  audio.h  ball.c  ball.h  brick.c  brick.h  brickblaster.rc  collision.c  collision.h  constants.h  demo.c  demo.h  draw.c  draw.h  font.c  font.h  game.c  game.h  gif_recorder.c  gif_recorder.h  hiscore.c  hiscore.h  i18n.c  i18n.h  input_frame.c  input_frame.h  input_gamepad.h  input_tilt.c  input_tilt.h  input_wear.c  input_wear.h  letterbox.h  level.c  level.h  main.c  mobile_controls.c  (+30 more)
